k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ttl.sh/backend-mern-1:23h  # Replace with your image
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend  # This name is used in Ingress routing
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  #type: ClusterIP #ClusterIP
