k8s/mern-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-react-routes
spec:
  parentRefs:                 # Which Gateway and listener to attach to
    - name: gateway           # Gateway name
      namespace: gw-api-nginx
      sectionName: http       # Listener name from Gateway spec
  hostnames:
    - "ac9265da17ca54f44b5ba208decc9783-805685577.us-east-2.elb.amazonaws.com"
  rules:                      # Routing rules
    - matches:
        - path:
            type: PathPrefix  # Match any path starting with /iphone
            value: /
      backendRefs:
        - name: frontend    # Service to send traffic to
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-node-routes
spec:
  parentRefs:
    - name: gateway
      namespace: gw-api-nginx
      sectionName: http
  hostnames:
    - "ac9265da17ca54f44b5ba208decc9783-805685577.us-east-2.elb.amazonaws.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 80
